<resources>
    <string name="app_name">Tasty</string>
    <string name="slogan">Welcome to Tasty. Here you can order Khorezm National meal</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Reed</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="refresh">Refresh</string>
    <string name="remember">REMEMBER ME</string>
</resources>
