<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6CFBC"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sign_in_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="34sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_minCharacters="12"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"

            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sign_in_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="34sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="36"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"

            />

        <CheckBox
            android:id="@+id/remember_check_box"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/sign_in_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="147dp"
        android:background="@color/sign_in_active_button_color"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>