<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6CFBC"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/slogan_text_view"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slogan"
            android:textColor="#123B38"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/main_sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/sign_up_button_color"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/main_sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/sign_in_active_button_color"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </LinearLayout>



</RelativeLayout>